--- a/docs/user_guide.adoc
+++ b/docs/user_guide.adoc
@@ -1838,6 +1838,7 @@ If that is the case add these dependencies to your alias :
 org.openjfx/javafx-controls {:mvn/version "19.0.2"}
 org.openjfx/javafx-base     {:mvn/version "19.0.2"}
 org.openjfx/javafx-graphics {:mvn/version "19.0.2"}
+org.openjfx/javafx-web      {:mvn/version "19.0.2"}
 ----
 
 = Internals, diagrams and documentation
